[package]
name = "saddle-ai-behavior-tree-example-basic"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-ai-behavior-tree = { workspace = true }
saddle-pane = { workspace = true }

[lints]
workspace = true
