[package]
name = "saddle-ai-behavior-tree-example-hot-swap"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
saddle-ai-behavior-tree = { workspace = true }
saddle-ai-behavior-tree-example-common = { path = "../common" }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-pane = { workspace = true }
saddle-bevy-e2e = { workspace = true, optional = true }

[lints]
workspace = true
